[bugfix] Changed github zip to tarball URL

--- a/plugin.conf
+++ b/plugin.conf
@@ -2,6 +2,6 @@ name=R1soft backup
 id=r1soft
 author=danielkoop.me
 version=1.1
-update_url=https://github.com/MrKoopie/directadmin_r1soft/archive/master.zip
+update_url=https://github.com/MrKoopie/directadmin_r1soft/archive/master.tar.gz
 active=yes
 installed=yes
